Fixed problem "card not showing".

--- a/meenkari/static/styles/gamepage.css
+++ b/meenkari/static/styles/gamepage.css
@@ -167,7 +167,7 @@ body{
     flex-direction: row;
     align-items: center;
     justify-content: center;
-    /*height: 100%;*/
+    height: 100%;
     max-width: 100%;
     background-color: transparent;
     margin: 0;
@@ -310,41 +310,33 @@ img{
 
 
 
-.declbutton{
-    /*box-sizing: border-box;
-    width: 90px;
-    height: 40px;
-    padding: 10px;
+/* .declbutton{
     font-family: 'Helvetica',sans-serif;
     font-size: 1.2em;
     background-color: grey;
     color: rgba(255, 255, 255, 0.9);
     text-align: center;
-    border-radius: 10px; */
+    border-radius: 10px;
 }
 
 .declbutton:hover{
-    /*background-color: rgba(255, 255, 255, 0.2);
-    cursor: pointer;*/
+    background-color: rgba(255, 255, 255, 0.2);
+    cursor: pointer;
 }
 
 .askbutton{
-    /*box-sizing: border-box;
-    width: 90px;
-    height: 40px;
-    padding: 10px;
     font-family: 'Helvetica',sans-serif;
     font-size: 1.2em;
     background-color: grey;
     color: rgba(255, 255, 255, 0.9);
     text-align: center;
-    border-radius: 10px; */
+    border-radius: 10px;
 }
 
 .askbutton:hover{
-    /*background-color: rgba(255, 255, 255, 0.2);
-    cursor: pointer;*/
-}
+    background-color: rgba(255, 255, 255, 0.2);
+    cursor: pointer;
+} */
 
 .askbox{
     box-sizing: border-box;
